@@ -1,5 +1,5 @@
 
-        <div class="text-muted align-center">Copyright &copy; 2020 Prusa Research a.s. All rights reserved.</div>
+        <div class="text-muted align-center">Copyright &copy; 2021 Prusa Research a.s. All rights reserved.</div>
         {%- if template_info is defined %}
         {%- from 'template_info.html' import render_info %}
         <pre class="template-info">
