@@ -54,6 +54,7 @@
     * Go into the ERROR state when the printer stops responding for aprox. one minute
     * Added endpoint for regenerate api-key
     * Added api/settings/sn endpoint for setup S/N of the printer
+    * Wizard is locked after successful configuration
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
